<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright © 2017 Cask Data, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not
  ~ use this file except in compliance with the License. You may obtain a copy of
  ~ the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  ~ WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing permissions and limitations under
  ~ the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>AnonymizerPlugin</name>
    <groupId>io.cdap.plugin</groupId>
    <artifactId>Anonymizer</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>CDAP</name>
            <email>cdap-dev@googlegroups.com</email>
            <organization>CDAP</organization>
            <organizationUrl>http://cdap.io</organizationUrl>
        </developer>
    </developers>

    <issueManagement>
        <url>https://issues.cask.co/browse/HYDRATOR</url>
    </issueManagement>

    <distributionManagement>
        <repository>
            <id>sonatype.release</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
        <snapshotRepository>
            <id>sonatype.snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <site>
            <id>cdap</id>
            <url>http://cdap.io</url>
        </site>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <cdap.version>6.0.0</cdap.version>
        <!--<cdap.version>6.1.0-SNAPSHOT</cdap.version>-->
        <hadoop.version>2.8.1</hadoop.version>
        <hydrator.version>2.3.0-SNAPSHOT</hydrator.version>
        <guava.version>13.0.1</guava.version>

        <apache-commons.version>1.2</apache-commons.version>
        <commons-codec.version>1.10</commons-codec.version>
        <json-path.version>2.2.0</json-path.version>
        <json.version>20160212</json.version>
        <snappy.version>1.1.2</snappy.version>
    </properties>

    <repositories>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public</url>
        </repository>
        <repository>
            <id>sonatype-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-etl-api</artifactId>
            <version>${cdap.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-formats</artifactId>
            <version>${cdap.version}</version>
            <!--
            <exclusions>
                <exclusion>
                    <groupId>org.apache.commons</groupId>
                    <artifactId>commons-lang3</artifactId>
                </exclusion>
            </exclusions>
            -->
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>hydrator-test</artifactId>
            <version>${cdap.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-data-pipeline</artifactId>
            <version>${cdap.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cdap.plugin</groupId>
            <artifactId>hydrator-common</artifactId>
            <version>${hydrator.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>${apache-commons.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>${commons-codec.version}</version>
        </dependency>
        <dependency>
            <groupId>org.xerial.snappy</groupId>
            <artifactId>snappy-java</artifactId>
            <version>${snappy.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-test</artifactId>
            <version>${cdap.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-unit-test</artifactId>
            <version>${cdap.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>asm</groupId>
                    <artifactId>asm</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${json.version}</version>
        </dependency>
        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>${json-path.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-client</artifactId>
            <version>${hadoop.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.cloud</groupId>
            <artifactId>google-cloud-storage</artifactId>
            <version>1.99.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>28.1-jre</version>
        </dependency>
        <dependency>
            <groupId>com.voltage</groupId>
            <artifactId>example-app</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/vibesimplejava.jar</systemPath>
            <type>jar</type>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.14.1</version>
                <configuration>
                    <argLine>-Xmx5000m -Djava.awt.headless=true -XX:MaxPermSize=1024m -XX:+UseConcMarkSweepGC
                        -XX:OnOutOfMemoryError="kill -9 %p" -Djava.net.preferIPv4Stack=true
                    </argLine>
                    <reuseForks>false</reuseForks>
                    <reportFormat>plain</reportFormat>
                    <systemPropertyVariables>
                        <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
                    </systemPropertyVariables>
                    <includes>
                        <include>**/*TestsSuite.java</include>
                        <include>**/*TestSuite.java</include>
                        <include>**/Test*.java</include>
                        <include>**/*Test.java</include>
                        <include>**/*TestCase.java</include>
                    </includes>
                    <excludes>
                        <exclude>**/*TestRun.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>2.5.4</version>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <Embed-Dependency>*;inline=false;scope=compile</Embed-Dependency>
                        <Embed-Transitive>true</Embed-Transitive>
                        <Embed-Directory>lib</Embed-Directory>
                        <!--Only @Plugin classes in the export packages will be included as plugin-->
                        <_exportcontents>io.cdap.plugin.batchsink.*</_exportcontents>
                    </instructions>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>bundle</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>io.cdap</groupId>
                <artifactId>cdap-maven-plugin</artifactId>
                <version>1.1.0</version>
                <configuration>
                    <cdapArtifacts>
                        <parent>system:cdap-data-pipeline[6.0.0,7.0.0-SNAPSHOT)</parent>
                        <parent>system:cdap-data-streams[6.0.0,7.0.0-SNAPSHOT)</parent>
                    </cdapArtifacts>
                </configuration>
                <executions>
                    <execution>
                        <id>create-artifact-config</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>create-plugin-json</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
